# imputation

./: .dockerignore  .gitignore  .gitmodules  ARCHIVED.md  CLAUDE.md  hor.py  pyproject.toml
analysis/0253d895-67be-40b9-a006-15d66a821a7f/: ANALYSIS.md  band_supports.json
analysis/175c88fc-d0ca-41e6-ad7f-30bdcdcfd22a/: band_supports.json
analysis/2be818d8-dd93-4f9b-9143-87112ac09d76/: band_supports.json
analysis/366d5ba6-60b7-4f2d-8f2c-2f132013f325/: band_supports.json
analysis/41ae826f-3fec-4b9a-938e-bbcbd0e225df/: ANALYSIS.md  band_supports.json
analysis/5114329d-9b82-4d24-8759-5cf8031a7f44/: band_supports.json
analysis/56635973-4eea-4d80-9bde-f765ae6f7e9e/: band_supports.json  scores.txt
analysis/63093dca-ac27-48ad-891b-b0485a5c4d63/: band_supports.json
handoffs/: making-more-imputation-tasks.md
readmes/: README_building_the_world.md  README_general_direction.md  README_submission.md  imputation_proposal.md  untouched-coamp-slots.md
self_review/: README.md  self-review_california-impute-direct.md
tasks/covertype-impute-coamp-single/src/venvs/: pyproject.toml
tasks_def/: __init__.py  adult_cat_coamp_multi.py  adult_cat_coamp_multi_mild.py  adult_cat_coamp_single.py  adult_cat_coamp_single_occ.py  adult_cat_multi.py  adult_cat_single.py  band_manifest.py  bank_cat_coamp_multi_mild.py  bank_cat_coamp_single.py  bank_cat_coamp_single_job.py  bank_cat_multi.py  bank_cat_single.py  california_coamp_multi.py  california_coamp_single.py  california_direct.py  california_direct_multi.py  covertype.py  covertype_coamp_multi.py  covertype_coamp_single.py  covertype_direct.py  covertype_direct_single.py  diabetes_cat_multi.py
tools/: band_report_impute.py  vendor_adult.py  vendor_bank.py  vendor_california.py  vendor_connect4.py  vendor_covertype.py  vendor_diabetes.py
(+193 files in other folders)
